# sm3

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
blake2b512/: README.md  blake2b512.sln
blake2b512/blake2b512/: blake2b512.cpp  blake2b512.vcxproj  blake2b512.vcxproj.filters
dynamically-linked-openssl/: CMakeLists.txt  main.cpp
statically-linked-openssl/: CMakeLists.txt  main.cpp
statically-linked-openssl/crypto/: md32_common.h
